Updated commas in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
 
-    "name": "YouTjube Sjearch"
-    "description": "The Js are silent"
+    "name": "YouTjube Sjearch",
+    "description": "The Js are silent",
     "version": "4.20.69",
 
 }
