--- a/manifest.json
+++ b/manifest.json
@@ -5,4 +5,13 @@
     "description": "The Js are silent",
     "version": "4.20.69",
 
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
+    },
+
+    "permissions": [
+        "activeTab",
+        "https://ajax.googleapis.com/"
+    ]
 }
